--- a/res/layout/activity_kioku_view.xml
+++ b/res/layout/activity_kioku_view.xml
@@ -21,5 +21,14 @@
         android:layout_centerHorizontal="true"
         android:onClick="showMapView"
         android:text="map" />
+
+        <TextView
+            android:id="@+id/descView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="TextView" />
         
 </RelativeLayout>
