--- a/res/menu/activity_kioku_map.xml
+++ b/res/menu/activity_kioku_map.xml
@@ -1,9 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/menu_kioku"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
-
+        android:title="@string/menu_kioku"/>
+    <item
+        android:id="@+id/menu_ishinomaki_bar"
+        android:orderInCategory="200"
+        android:title="@string/menu_ishinomaki_bar"/>
+    <item
+        android:id="@+id/menu_ginza_bar"
+        android:orderInCategory="300"
+        android:title="@string/menu_ginza_bar"/>
+    
 </menu>
