--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,6 +4,13 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+   <TextView
+        android:id="@+id/locationText"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.08"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+   
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
